# Bibliotheque

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  Rocket.toml  bibliotheque.db
migrations/: 20240101000000_create_books.sql  20240101000001_add_series_subtitle.sql  20240101000002_add_volume_number.sql  20240101000004_merge_series_title.sql  20240101000005_make_year_optional.sql  20240101000006_add_cover_path.sql
src/: main.rs  models.rs  routes.rs
templates/: add.html.tera  base.html.tera  edit.html.tera  index.html.tera  list.html.tera
